# minidb

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  Makefile  README.md  ROADMAP.md  demo.db.orders.idx  demo.db.orders.tbl  demo.db.users.tbl
bindings/python/: Cargo.toml  README.md  example.py  pyproject.toml
bindings/python/src/: lib.rs
build 2/: test_agg  test_btree  test_bufpool  test_dml  test_dml.db.users.idx  test_dml.db.users.tbl  test_exec  test_exec.db.users.idx  test_exec.db.users.tbl  test_heap  test_join  test_page  test_pager  test_sql  test_txn  test_txn.db.users.idx  test_txn.db.users.tbl  test_wal  test_waldml  test_where  test_where.db.picks.idx  test_where.db.picks.tbl  test_where.db.users.idx  test_where.db.users.tbl
build 2/test_agg.dSYM/Contents/: Info.plist
build 2/test_bufpool.dSYM/Contents/: Info.plist
build 2/test_dml.dSYM/Contents/: Info.plist
build 2/test_join.dSYM/Contents/: Info.plist
build 2/test_pager.dSYM/Contents/: Info.plist
build 2/test_sql.dSYM/Contents/: Info.plist
build 2/test_txn.dSYM/Contents/: Info.plist
docs/: post-14-aries-plan.md  post-15-noforce-aries-plan.md
examples/: bench.rs  demo.rs  persistence.rs
src/: btree.c  btree.h  bufpool.c  bufpool.h  db.c  db.h  db.rs  heap.c  heap.h  lib.rs  lock.c  lock.h  main.c  mvcc.c  mvcc.h  page.c  page.h  pager.c  pager.h  sql.c  sql.h  store.rs  tree.rs  wal.c  wal.h
tests/: bench.c  test_agg.c  test_btree.c  test_bufpool.c  test_dml.c  test_exec.c  test_explain.c  test_heap.c  test_isolation.c  test_join.c  test_lock.c  test_mvcc.c  test_mvcc_store.c  test_page.c  test_pager.c  test_recovery.c  test_secindex.c  test_sql.c  test_txn.c  test_wal.c  test_waldml.c  test_where.c
(+31 files in other folders)
