[package]
name = "branchdb"
version = "0.1.0"
edition = "2021"
description = "An embedded, branchable key-value store for AI agents. O(1) copy-on-write branching via a persistent immutable tree."
license = "MIT"

[lib]
name = "branchdb"
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]

# Python 바인딩은 무거운 의존성(pyo3)을 쓰므로 별도 크레이트로 분리해, 코어의
# "의존성 0"과 일반 `cargo test`를 그대로 유지한다.
[workspace]
exclude = ["bindings/python"]
