[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "branchdb"
version = "0.1.0"
description = "Embedded, branchable key-value store for AI agents — O(1) copy-on-write branching (Python bindings)."
requires-python = ">=3.9"
license = { text = "MIT" }
readme = "README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
